# modelbox

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
model_repository/bg_removal/: config.pbtxt
model_repository/depth_pro/: config.pbtxt
modelbox/: app.py  bg_removal_utils.py  core.py  depth_pro_utils.py  image_to_image.py  settings.py  to_background_mask.py  to_depth_mask.py  triton_inferer.py  utils.py
scripts/: export_bg_removal_onnx.py  export_depth_pro.py  export_depth_pro_onnx.py  infer_bg_removal_onnx.py  infer_bg_removal_triton.py  infer_depth_pro.py  infer_depth_pro_onnx.py  infer_depth_pro_triton.py  setup.py  test_inference.py
scripts/data/: bg_removal_spoty  depth_pro_ring  depth_pro_spoty
