[project]
name = "modelbox"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Alexey Karnachev", email = "alekseykarnachev@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "depth-pro",
    "huggingface-hub>=0.30.1",
    "onnx>=1.17.0",
    "onnxruntime-gpu>=1.21.0",
    "onnxruntime>=1.21.0",
    "typer>=0.15.2",
    "tritonclient[all]>=2.55.0",
]

[project.scripts]
modelbox = "modelbox:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
depth-pro = { git = "https://github.com/apple/ml-depth-pro" }
