[project]
name = "modelbox"
version = "0.1.0"
authors = [
    { name = "Alexey Karnachev", email = "alekseykarnachev@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "typer>=0.15.2",
    "tritonclient[all]>=2.55.0",
    "litestar>=2.15.1",
    "pydantic-settings>=2.8.1",
    "uvicorn>=0.34.0",
    "loguru>=0.7.3",
    "pillow>=11.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["modelbox"]

[tool.uv]
dev-dependencies = [
    "depth-pro",
    "huggingface-hub>=0.30.1",
    "onnx>=1.17.0",
    "onnxruntime>=1.21.0",
    "onnxruntime-gpu>=1.21.0",
]

[tool.uv.sources]
depth-pro = { git = "https://github.com/apple/ml-depth-pro" }
