[project]
name = "modelbox"
version = "0.1.0"
authors = [
    { name = "Alexey Karnachev", email = "alekseykarnachev@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "typer>=0.15.2",
    "tritonclient[all]>=2.55.0",
    "pydantic-settings>=2.8.1",
    "uvicorn>=0.34.0",
    "loguru>=0.7.3",
    "pillow>=11.1.0",
    "transformers>=4.51.3",
    "opencv-python>=4.11.0.86",
    "fastapi>=0.115.12",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["modelbox"]

[tool.uv]
dev-dependencies = [
    "depth-pro",
    "huggingface-hub>=0.30.1",
    "onnx>=1.17.0",
    "onnxruntime>=1.21.0",
    "onnxruntime-gpu>=1.21.0",
    "mypy>=1.9.0",
    "pre-commit>=3.7.0",
    "ruff>=0.3.4"
]

[tool.uv.sources]
depth-pro = { git = "https://github.com/apple/ml-depth-pro" }

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "F",  # pyflakes
    "I",  # isort
    "UP", # pyupgrade
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "SIM", # flake8-simplify
    "TID", # flake8-tidy-imports
    "PTH", # flake8-use-pathlib
    "RUF", # ruff-specific rules
]
ignore = [
    "E501",  # line too long, handled by formatter
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # unused imports

[tool.ruff.lint.isort]
known-first-party = ["modelbox"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
strict_optional = true
show_error_codes = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false

[[tool.mypy.overrides]]
ignore_missing_imports = true
